--- a/css/main.css
+++ b/css/main.css
@@ -98,14 +98,87 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
+  .content-wrapper {
+     width: 90%;
+     margin: 50px 0;
+   }
+
    /* -------------------- Base Header - Footer Styles -------------------- */
  header,
  footer {
- display: flex;
- justify-content: center;
- align-items: center;
- flex-flow: row wrap;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-flow: row wrap;
  }
+
+ header {
+   padding: 15px 0;
+ }
+
+ header .content-wrapper {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   flex-flow: row wrap;
+   margin: 0;
+ }
+
+ .header-divider {
+   width: 100%;
+   height: 1px;
+   margin: 10px 0 20px 0;
+ }
+
+ header nav {
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+   flex-flow: row wrap;
+   width: 60%;
+ }
+
+ header nav ul {
+   display: flex;
+   justify-content: space-around;
+   width: 100%;
+ }
+
+ footer {
+   flex-direction: column;
+ }
+
+ footer p {
+   margin: 0;
+ }
+
+ footer .content-wrapper {
+   width: 55%;
+   margin: 50% 0;
+ }
+
+ footer .contact {
+   margin-bottom: 50px;
+ }
+
+ footer .social-icons {
+   display: flex;
+   justify-content: space-around;
+   align-items: center;
+ }
+
+ footer .social-icons p {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+
+ footer .copyright {
+   margin: 20px 0;
+ }
+
+
+
 /* ==========================================================================
    Helper classes
    ========================================================================== */
