--- a/css/main.css
+++ b/css/main.css
@@ -98,10 +98,58 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-  .content-wrapper {
+   /* General Styles */
+
+html {
+
+}
+
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+ul,
+ol {
+
+}
+
+a {
+
+}
+
+h2 {
+  font-family: 'Poppins', sans-serif;
+}
+
+h3,
+h4 {
+  font-family: 'Poppins', sans-serif;
+}
+
+p {
+
+}
+
+img {
+
+}
+
+figure {
+
+}
+
+address {
+
+}
+
+.content-wrapper {
+
+}
+
+.content-wrapper {
      width: 90%;
      margin: 50px 0;
-   }
+}
 
    /* -------------------- Base Header - Footer Styles -------------------- */
  header,
