--- a/css/main.css
+++ b/css/main.css
@@ -101,11 +101,12 @@ textarea {
    /* General Styles */
 
 html {
-
+  font-size: 16px;
 }
 
 body {
   font-family: 'Open Sans', sans-serif;
+  font-size: 1em;
 }
 
 ul,
@@ -114,7 +115,8 @@ ol {
 }
 
 a {
-
+  color: #e2e3ed;
+  text-decoration: none;
 }
 
 h2 {
@@ -349,6 +351,31 @@ address {
   /* Hero Area */
 
   /* Aside */
+aside .form {
+  margin-top: 30px;
+}
+
+input[type=text] {
+  box-sizing: border-box;
+  width: 100%;
+  color: #2a423a;
+  font-style: italic;
+}
+
+input[type=button] {
+  width: 100%;
+  padding: 20px 0;
+  margin-top: 20px;
+  background-color: #2a423a;
+  font-family: 'Poppins', Helvetica, Arial, sans-serif;
+  font-weight: 500;
+  font-size: 1.125em;
+  color: #e2e3ed;
+  border: none;
+  text-align: center;
+  text-transform: uppercase;
+}
+  }
   aside .content-wrapper {
     margin: 50px 0;
     display: flex;
